--- a/Dom_Projects/Color_Changer/style.css
+++ b/Dom_Projects/Color_Changer/style.css
@@ -3,52 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
-    height: 100%;
-    width: 100%;
+body{
+    margin-top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 .box{
-    height: 400px;
-    width: 350px;
-    border: 2px solid black;
+    border: 1px solid black;
+    height: 300px;
+    width: 300px;
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    line-height: 300px;
 }
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #212121;
+#yellow{
+    background-color: yellow;
+}
+#red{
+    background-color: red;
 }
 
-.buttons{
-    display: flex;
-    /* height: 60px; */
-    font-size: 16px;
-    justify-content: space-evenly;
-    margin-top: 10px;
-    padding: 10px 20px;
-    gap: 30px;
-}
-#button1{
-    background-color: red;
-    color: white;
-}
-#button2{
-    background-color: green;
-    color: white;
-}
-#button3{
-    background-color: yellow;
-    color: black;
-}
-#button4{
+#blue{
     background-color: blue;
-    color: white;
 }
-#button5{
-    background-color: black;
-    color: white;
+
+#green{
+    background-color: green;
 }
